Add 'steps and don't forget' comments to template. Add <header>. Add comments.

--- a/bootstrap-basic-template.html
+++ b/bootstrap-basic-template.html
@@ -23,14 +23,49 @@
 </head>
 
 <body>
-    <h1>Headline</h1>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-    <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum.</p>
+    <header>
+        <!-- branding and navigation go here -->
+    </header>
+
+
+    <!-- Steps and don't forget to...
+  1. Gather Content Requirements.
+  2. Separate content into 'Primary' content and 'Secondary' content.
+  3. Outline content into 'Structure' of page (get approval of outline?).
+  4. In text editor, create starting html opener, head area with links to generic css and js folders.
+  5. In text editor, write comments that outline basic structure of content before starting to code.
+  6.  In text editor, create document sections by using html5 semantics such as header, section, article, article footer, aside,
+
+  Useage in general but see style guidelines:
+  Article = a piece of clothing (independent of page)
+  Section = group semantic content together
+  Aside = is related to but not directly connected
+  Div = for decorative or non-semantic content
+  (Have consistent useage within project of how tags are used.)
+
+  7. Add Bootstrap classes to semantic tags as needed.
+
+  Basic Bootstrap 'getting started' classes to add to semantic tags:
+      *** First you must have this for 'mobile first'--<meta name="viewport" content="width=device-width, initial-scale=1">
+  .container (fixed width container)
+  .container-fluid (full width container)
+  .row (creates 12 grid framework)
+  .col-*-* (* = the desired number of columns to span. Note that numbers in .col-*-* within a row should always add up to 12 for each row)
+
+  8. Tip: as you create semantic tags, ids, and classes and/or if you are going to overwrite Bootstrap css classes, then add these elements to your CSS file as you work on your html file. It will save you time and help you stay organized.
+  9. Remember to use 'alt' and 'title' on images and 'alt' on links.
+  10. Remember to use 'role' on elements that need it's role descripted for accessiblity.
+
+
+    <!-- generic <h1> to show document when opened in browser -->
+    <h1>Hey World, it's me!</h1>
+
 
 
 
     <footer>
 
+        <!-- page/nav links, copyright, disclaimer, contact information, social media connection, etc goes here. -->
 
     </footer>
 
