Add additional html5 semantic tag notes

--- a/bootstrap-basic-template.html
+++ b/bootstrap-basic-template.html
@@ -34,13 +34,18 @@
   3. Outline content into 'Structure' of page (get approval of outline?).
   4. In text editor, create starting html opener, head area with links to generic css and js folders.
   5. In text editor, write comments that outline basic structure of content before starting to code.
-  6.  In text editor, create document sections by using html5 semantics such as header, section, article, article footer, aside,
+  6.  In text editor, create document sections by using html5 semantics tags.
 
   Useage in general but see style guidelines:
+  Main = identifies 'main' content and purpuse of a page
+  Header = use for introduction of content or for navigation
   Article = a piece of clothing (independent of page)
   Section = group semantic content together
   Aside = is related to but not directly connected
   Div = for decorative or non-semantic content
+  Footer = information about section such as author, links, copyright, disclaimers, etc
+  Figure and figcaption = use for illustrations, diagram, images that fit content needs (not for decorative elements)
+  Description List <dl> and <dd> = associated lists to content
   (Have consistent useage within project of how tags are used.)
 
   7. Add Bootstrap classes to semantic tags as needed.
