Add addtional notes to comments

--- a/html5 _semantic_bootstrap-basic-template.html
+++ b/html5 _semantic_bootstrap-basic-template.html
@@ -61,6 +61,7 @@
   8. Tip: as you create semantic tags, ids, and classes and/or if you are going to overwrite Bootstrap css classes, then add these elements to your CSS file as you work on your html file. It will save you time and help you stay organized.
   9. Remember to use 'alt' and 'title' on images and 'alt' on links.
   10. Remember to use 'role' on elements that need it's role descripted for accessiblity.
+  11. Remember to make comments within html and css files that are to the point, meaningful, and semantic for both humans and machine.
 
 
     <!-- generic <h1> to show document when opened in browser -->
