Add additional comment notes to file

--- a/html5 _semantic_bootstrap-basic-template.html
+++ b/html5 _semantic_bootstrap-basic-template.html
@@ -43,11 +43,11 @@
   Section = group semantic content together
   Aside = is related to but not directly connected
   Div = for decorative or non-semantic content
-  Footer = information about section such as author, links,             copyright, disclaimers, etc
-  Figure and figcaption = use for illustrations, diagram, images that   fit content needs (not for decorative elements)
+  Footer = information about section such as author, links,               copyright, disclaimers, etc
+  Figure and figcaption = use for illustrations, diagram, images that     fit content needs (not for decorative elements)
   Description List <dl> and <dd> = associated lists to content
-  id vs. class (used semantically) = id for unique identification of   sections within page; class for repeatative elements or <non->     </non->unique identification
-  (Have consistent useage within project of how tags are used.)
+  id vs. class (used semantically) = id for unique identification of     sections within page; class for repeatative elements or <non->     </non->unique identification
+  (Note:Have consistent useage within project of how tags are used.)
 
   7. Add Bootstrap classes to semantic tags as needed.
 
@@ -58,10 +58,11 @@
   .row (creates 12 grid framework)
   .col-*-* (* = the desired number of columns to span. Note that numbers in .col-*-* within a row should always add up to 12 for each row)
 
-  8. Tip: as you create semantic tags, ids, and classes and/or if you are going to overwrite Bootstrap css classes, then add these elements to your CSS file as you work on your html file. It will save you time and help you stay organized.
+  8. Tip: as you create semantic tags, ids, and classes and/or if you     are going to overwrite Bootstrap css classes, then add these       elements to your CSS file as you work on your html file. It         will save you time and help you stay organized.
   9. Remember to use 'alt' and 'title' on images and 'alt' on links.
-  10. Remember to use 'role' on elements that need it's role descripted for accessiblity.
-  11. Remember to make comments within html and css files that are to the point, meaningful, and semantic for both humans and machine.
+  10. Remember to use 'role' on elements that need it's role             descripted for accessiblity--https://www.w3.org/TR/html-aria/.
+  11. Remember to use 'Microdata/Rich-Data' mark up when needed such     as from http://schema.org/docs/schemas.html.
+  12. Remember to make comments within html and css files that are to the point, meaningful, and semantic for both humans and machine.
 
 
     <!-- generic <h1> to show document when opened in browser -->
