Finished comment notes. Use as template for teaching or as reminder of WorkFlow.

--- a/html5 _semantic_bootstrap-basic-template.html
+++ b/html5 _semantic_bootstrap-basic-template.html
@@ -28,7 +28,7 @@
     </header>
 
 
-    <!-- Steps and don't forget to...
+    <!-- WorkFlow and don't forget to...
   1. Gather Content Requirements.
   2. Separate content into 'Primary' content and 'Secondary' content.
   3. Outline content into 'Structure' of page (get approval of outline?).
