Uploading for backup.

--- a/0_BasicResponsiveWebsiteTemplate/index.html
+++ b/0_BasicResponsiveWebsiteTemplate/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <header id="mainHeader" role="banner">
+    <header id="mainHeader">
         <a href="#"><img class="logo" src="images/logo.png" alt="???" /></a>
-        <nav class="mainNav" role="navigation">
+        <nav class="mainNav">
             <ul>
                 <li><a class="active" href="#">item 1</a></li>
                 <li><a href="#">item 2</a></li>
@@ -34,13 +34,13 @@
     <header>
         <h1>Main Headline of Page</h1>
     </header>
-    <main id="mainContent" role="main">
+    <main id="mainContent">
         <p class="breadcrumbs"><a href="#">breadcrumbHome???</a> &gt; <a href="#">breadcrumbActive???</a></p>
         <header>
             <h2>SubHeadline of Page</h2>
         </header>
         <section id="articleContent">
-            <article class="articleOne" role="article">
+            <article class="articleOne">
                 <header>
                     <h3 class="articleHeader"><a href="#">Article One Title???</a></h3>
                     <h4 class="subtitle">subtitle???</h4>
@@ -49,7 +49,7 @@
                 <a class="articleReadmore" href="#">Read More???</a>
             </article>
             <!-- .articleOne -->
-            <article class="articleTwo" role="article">
+            <article class="articleTwo">
                 <header>
                     <h3 class="articleHeader"><a href="#">Article Two Title???</a></h3>
                     <h4 class="subtitle">subtitle???</h4>
@@ -58,7 +58,7 @@
                 <a class="articleReadmore" href="#">Read More???</a>
             </article>
             <!-- .articleTwo -->
-            <article class="articleThree" role="article">
+            <article class="articleThree">
                 <header>
                     <h3 class="articleHeader"><a href="#">Article Three Title???</a></h3>
                     <h4 class="subtitle">subtitle???</h4>
@@ -123,7 +123,7 @@
     <div class="clearFloat">
     </div>
     <!-- .clearFloat -->
-    <footer id="pageFooter" role="contentinfo">
+    <footer id="pageFooter">
         <p class="topLink"><a href="#mainHeader">return to top</a></p>
         <a href="#"><img class="footerLogo" src="images/logo.png" alt="???" /></a>
         <nav class="footerNav">
