Upload today's work on html and css.

--- a/0_BasicFluid-ResponsiveWebsiteTemplate/index.html
+++ b/0_BasicFluid-ResponsiveWebsiteTemplate/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Basic Responsive Website Template</title>
-    <meta name="description" content="Basic Responsive Website Template???">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Basic Responsive Website Template???" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
     <script src="js/script.js"></script>
     <!-- Adds HTML5 element support for earlier versions of IE -->
@@ -13,7 +14,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body id="containerWrap">
     <header id="mainHeader">
         <a href="#"><img class="logo" src="images/logo.png" alt="???" /></a>
         <nav class="mainNav">
@@ -30,7 +31,10 @@
         </nav>
         <!-- .mainNav -->
         <!-- breadcrumb navigation -->
-        <p class="breadcrumbs"><a href="#">breadcrumbHome???</a> &gt; <a href="#">breadcrumbActive???</a></p>
+        <div>
+            <p class="breadcrumbs"><a href="#">breadcrumbHome???</a> &gt; <a href="#">breadcrumbActive???</a></p>
+        </div>
+        <!-- breadcrumb navigation -->
     </header>
     <!-- .mainHeader -->
     <main id="mainContent">
@@ -112,7 +116,7 @@
                 <h3 class="sidebarTitle">Sidebar Title Two???</h3>
                 <h4 class="subtitle">subtitle???</h4>
             </header>
-            <p class="sidebarParagraph">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum.</p>
+            <p class="sidebarParagraph">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Souvlaki ignitus carborundum e pluribus unum.</p>
             <a class="sidebarReadmore" href="#">Read More???</a>
         </article>
         <!-- .sidebarBlockTwo -->
@@ -121,7 +125,7 @@
                 <h3 class="sidebarTitle">Sidebar Title Three???</h3>
                 <h4 class="subtitle">subtitle???</h4>
             </header>
-            <p class="sidebarParagraph">Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, li tot Europa usa li sam vocabularium. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilita; de un nov lingua franca: on refusa continuar payar custosi traductores.</p>
+            <p class="sidebarParagraph">Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, li tot Europa usa li sam vocabularium. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilita; de un nov lingua franca: on refusa continuar payar custosi traductores. It solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles.</p>
             <a class="sidebarReadmore" href="#">Read More???</a>
         </article>
         <!-- .sidebarBlockThree -->
@@ -144,9 +148,6 @@
                 <li><a href="#">item 3</a></li>
                 <li><a href="#">item 4</a></li>
                 <li><a href="#">item 5</a></li>
-                <li><a href="#">item 6</a></li>
-                <li><a href="#">item 7</a></li>
-                <li><a href="#">item 8</a></li>
             </ul>
         </nav>
         <!-- .footerNav-->
@@ -174,5 +175,6 @@
     <!-- .copyRight footer -->
 
 </body>
+<!-- #containerWrap-->
 
 </html>
