Upload for backup.

--- a/0_BasicFluid-ResponsiveWebsiteTemplate/index.html
+++ b/0_BasicFluid-ResponsiveWebsiteTemplate/index.html
@@ -6,7 +6,7 @@
     <title>Basic Responsive Website Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Basic Responsive Website Template???" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <script src="js/script.js"></script>
     <!-- Adds HTML5 element support for earlier versions of IE -->
     <!--[if lt IE 9]>
@@ -90,7 +90,7 @@
         </section>
         <!-- end #articleContent -->
         <!-- start Description List -->
-        <section id="descriptionList">
+        <section id="descriptionList" class="page-break">
             <h3 class="descriptionHeadline">Description Headline</h3>
             <dl>
                 <dt class="descriptionListHead">Description List Head One</dt>
@@ -116,7 +116,7 @@
                 <h3 class="sidebarTitle">Sidebar Title Two???</h3>
                 <h4 class="subtitle">subtitle???</h4>
             </header>
-            <p class="sidebarParagraph">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Souvlaki ignitus carborundum e pluribus unum.</p>
+            <p class="sidebarParagraph">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum.</p>
             <a class="sidebarReadmore" href="#">Read More???</a>
         </article>
         <!-- .sidebarBlockTwo -->
@@ -125,7 +125,7 @@
                 <h3 class="sidebarTitle">Sidebar Title Three???</h3>
                 <h4 class="subtitle">subtitle???</h4>
             </header>
-            <p class="sidebarParagraph">Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, li tot Europa usa li sam vocabularium. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilita; de un nov lingua franca: on refusa continuar payar custosi traductores. It solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles.</p>
+            <p class="sidebarParagraph">Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, li tot Europa usa li sam vocabularium. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilita; de un nov lingua franca: on refusa continuar payar custosi traductores.</p>
             <a class="sidebarReadmore" href="#">Read More???</a>
         </article>
         <!-- .sidebarBlockThree -->
@@ -173,7 +173,12 @@
         <!-- copyright, terms of use-->
     </footer>
     <!-- .copyRight footer -->
-
+    <div class="clearFloat">
+    </div>
+    <div class="#printed-article">
+        <p>Thank you for printing this page.</p>
+        <p class="footerParagraph">Please call Name Here??? Customer Service at 000.000.000 or send us an email at info@???.??? with questions.</p>
+    </div>
 </body>
 <!-- #containerWrap-->
 
