Change printed-article from a class to an id. Correct name in html markup.

--- a/0_BasicFluid-ResponsiveWebsiteTemplate/index.html
+++ b/0_BasicFluid-ResponsiveWebsiteTemplate/index.html
@@ -175,7 +175,7 @@
     <!-- .copyRight footer -->
     <div class="clearFloat">
     </div>
-    <div class="#printed-article">
+    <div id="printed-article">
         <p>Thank you for printing this page.</p>
         <p class="footerParagraph">Please call Name Here??? Customer Service at 000.000.000 or send us an email at info@???.??? with questions.</p>
     </div>
