Add 'box content' markup. Divid markup into commented sections.

--- a/0_BasicBootstrapWebsiteTemplate/index.html
+++ b/0_BasicBootstrapWebsiteTemplate/index.html
@@ -76,6 +76,7 @@
 </header>
 
 <body>
+    <!-- start jumbotron section -->
     <div class="jumbotron">
         <div class="container">
             <div class="row">
@@ -92,7 +93,50 @@
         </div>
         <!-- .container -->
     </div>
-    <! -- .jumbotron -->
+    <!-- .jumbotron -->
+    <!-- end jumbotron section -->
+    <!-- start main content -->
+    <!-- start box content -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="boxOne">
+                    <h3>Headline</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                    <a href="#" class="readMore">Read More</a>
+                </div>
+                <!-- .boxOne -->
+            </div>
+            <!-- end .boxOne -->
+            <div class="col-md-4">
+                <div class="boxTwo">
+                    <h3>Headline</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                    <a href="#" class="readMore">Read More</a>
+                </div>
+                <!-- .boxTwo -->
+            </div>
+            <!-- end .boxTwo -->
+            <div class="col-md-4">
+                <div class="boxThree">
+                    <h3>Headline</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                    <a href="#" class="readMore">Read More</a>
+                </div>
+                <!-- .boxThree -->
+            </div>
+            <!-- end .boxThree -->
+        </div>
+        <! -- .row -->
+    </div>
+    <!-- end box content -->
+    <!-- start article content -->
+
+
+    <!-- end article content -->
+    <!-- main .container -->
+    <!-- start footer content -->
+
 
 
 
