Create media object inside of panel. Add small image placeholder to media object layout.

--- a/0_BasicBootstrapWebsiteTemplate/index.html
+++ b/0_BasicBootstrapWebsiteTemplate/index.html
@@ -131,6 +131,48 @@
     </div>
     <!-- end box content -->
     <!-- start article content -->
+    <div class="row padTop-1em">
+        <div class="col-md-8">
+            <div class="articleContent">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Panel Title</h3>
+                    </div>
+                    <!-- .panel-heading -->
+                    <div class="panel-body">
+                        <div class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object" src="images/small.jpg" alt="photoAltHere???">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Media heading</h4> ...
+                            </div>
+                        </div>
+                        <!-- .media -->
+                    </div>
+                    <!-- .panel-body -->
+                </div>
+
+            </div>
+            <!-- .articleContent -->
+
+        </div>
+        <!-- .col-md-8 -->
+        <div class="col-md-4">
+            <div class="sideBar">
+
+            </div>
+            <!-- .sideBar -->
+
+        </div>
+        <!-- .col-md-4 -->
+
+    </div>
+
+
+
 
 
     <!-- end article content -->
