--- a/0_BasicBootstrapWebsiteTemplate/index.html
+++ b/0_BasicBootstrapWebsiteTemplate/index.html
@@ -130,30 +130,56 @@
         <! -- .row -->
     </div>
     <!-- end box content -->
-    <!-- start article content -->
+    <!-- start panel content -->
     <div class="row padTop-1em">
         <div class="col-md-8">
             <div class="articleContent">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Panel Title</h3>
+                        <h3 class="panel-title">Panel Headline</h3>
                     </div>
                     <!-- .panel-heading -->
                     <div class="panel-body">
                         <div class="media">
                             <div class="media-left">
                                 <a href="#">
-                                    <img class="media-object" src="images/small.jpg" alt="photoAltHere???">
+                                    <img class="media-object img-circle" src="images/small.jpg" alt="photoAltHere???">
                                 </a>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">Media heading</h4> ...
+                                <h4 class="media-heading">Media heading</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                            </div>
+                        </div>
+                        <!-- .media -->
+                        <div class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object  img-circle" src="images/small.jpg" alt="photoAltHere???">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Media heading</h4>
+                                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi..</p>
+                            </div>
+                        </div>
+                        <!-- .media -->
+                        <div class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object  img-circle" src="images/small.jpg" alt="photoAltHere???">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Media heading</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                             </div>
                         </div>
                         <!-- .media -->
                     </div>
                     <!-- .panel-body -->
                 </div>
+                <!-- .panel panel-default -->
 
             </div>
             <!-- .articleContent -->
@@ -175,7 +201,7 @@
 
 
 
-    <!-- end article content -->
+    <!-- end panel content -->
     <!-- main .container -->
     <!-- start footer content -->
 
