--- a/0_BasicBootstrapWebsiteTemplate/index.html
+++ b/0_BasicBootstrapWebsiteTemplate/index.html
@@ -22,7 +22,7 @@
 <![endif]-->
 </head>
 <header>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -68,11 +68,11 @@
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
+        <div class="topBar">
+        </div>
+        <! -- .topBar -->
     </nav>
     <!-- .navbar .navbar-default -->
-    <div class="topBar">
-    </div>
-    <! -- .topBar -->
 </header>
 
 <body>
@@ -101,7 +101,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="boxOne">
-                    <h3>Headline</h3>
+                    <h3><span class="glyphicon glyphicon-book"></span>Headline</h3>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                     <a href="#" class="readMore">Read More</a>
                 </div>
@@ -110,7 +110,7 @@
             <!-- end .boxOne -->
             <div class="col-md-4">
                 <div class="boxTwo">
-                    <h3>Headline</h3>
+                    <h3><span class="glyphicon glyphicon-apple"></span>Headline</h3>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                     <a href="#" class="readMore">Read More</a>
                 </div>
@@ -119,7 +119,7 @@
             <!-- end .boxTwo -->
             <div class="col-md-4">
                 <div class="boxThree">
-                    <h3>Headline</h3>
+                    <h3><span class="glyphicon glyphicon-piggy-bank"></span>Headline</h3>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                     <a href="#" class="readMore">Read More</a>
                 </div>
@@ -188,36 +188,64 @@
         <!-- .col-md-8 -->
         <div class="col-md-4">
             <div class="sideBar">
+                <div class="list-group">
+                    <a href="#" class="list-group-item active">
+                        Cras justo odio
+                    </a>
+                    <a href="#" class="list-group-item">Link List One</a>
+                    <a href="#" class="list-group-item">Link List Two</a>
+                    <a href="#" class="list-group-item">Link List Three</a>
+                    <a href="#" class="list-group-item">Link List Four</a>
+                </div>
+                <!-- .list-group -->
+                <!-- start bootstrap 'custom content' list group -->
+                <div class="customContent list-group">
+                    <a href="#" class="list-group-item">
+                        <h4 class="list-group-item-heading">Custom Content Heading One</h4>
+                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                    </a>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item">
+                            <h4 class="list-group-item-heading">Custom Content Heading One</h4>
+                            <p class="list-group-item-text">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <h4 class="list-group-item-heading">Custom Content Heading One</h4>
+                            <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                        </a>
+                    </div>
+                    <!-- .list-group -->
+
+
+                </div>
+                <!-- .sideBar -->
 
             </div>
-            <!-- .sideBar -->
+            <!-- .col-md-4 -->
 
         </div>
-        <!-- .col-md-4 -->
-
-    </div>
 
 
 
 
 
-    <!-- end panel content -->
-    <!-- main .container -->
-    <!-- start footer content -->
+        <!-- end panel content -->
+        <!-- main .container -->
+        <!-- start footer content -->
 
 
 
 
-    <footer>
+        <footer>
 
 
-    </footer>
+        </footer>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <!--Custom JavaScript-->
-    <script src="js/script.js"></script>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        <!--Custom JavaScript-->
+        <script src="js/script.js"></script>
 </body>
 
 </html>
