Create login and register links. Add Fade out/in markup and image.

--- a/0_BasicBootstrapWebsiteTemplate/index.html
+++ b/0_BasicBootstrapWebsiteTemplate/index.html
@@ -62,7 +62,8 @@
                         </div>
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
-                    <li><a href="#">Link</a></li>
+                    <li class="logIn"><a href="#">LogIn???</a></li>
+                    <li class="registerLink"><a href="#">Register</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -143,8 +144,8 @@
                         <div class="media">
                             <div class="media-left">
                                 <a href="#">
-                                    <img class="media-object img-circle" src="images/small.jpg" alt="photoAltHere???">
-                                </a>
+                                    <a href=""><img class="media-object img-circle imageFadeOut" src="images/small.jpg" alt="photoAltHere???">
+                                    </a>
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading">Media heading</h4>
@@ -155,7 +156,7 @@
                         <div class="media">
                             <div class="media-left">
                                 <a href="#">
-                                    <img class="media-object  img-circle" src="images/small.jpg" alt="photoAltHere???">
+                                    <img class="media-object img-circle imageFadeOut" src="images/small.jpg" alt="photoAltHere???">
                                 </a>
                             </div>
                             <div class="media-body">
@@ -167,7 +168,7 @@
                         <div class="media">
                             <div class="media-left">
                                 <a href="#">
-                                    <img class="media-object  img-circle" src="images/small.jpg" alt="photoAltHere???">
+                                    <img class="media-object img-circle imageFadeOut" src="images/small.jpg" alt="photoAltHere???">
                                 </a>
                             </div>
                             <div class="media-body">
